pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pihole
    namespace: default
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: default
spec:
  type: NodePort
  selector:
    app: pihole 
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
